Refactor: weekly ➡️ home으로 frm이름 변경
- 해당 fragment에서 주간/월간 캘린더를 모두 관리하고 있기 때문에, 보다 포괄적인 의미를 담고있는 home으로 이름 변경

--- a/Oops-Android/app/src/main/res/layout/fragment_home.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/Gray_100"
-    tools:context=".ui.Main.Home.WeeklyFragment"
+    tools:context=".ui.Main.Home.HomeFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- 캘린더 -->
