Style: Dialog의 폰트 사이즈 통일
- 타이틀 20pt, 본문 14pt로 변경
- 스타일화하여 모든 화면에 적용함

--- a/Oops-Android/app/src/main/res/layout/dialog_push_alert_disagree.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_push_alert_disagree.xml
@@ -11,9 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_disagree"
-        android:textSize="20sp"
-        android:textColor="@color/Black"
-        android:fontFamily="@font/pretendard_bold"
+        style="@style/dialog_title"
         android:gravity="center"/>
 
     <TextView
@@ -21,9 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="{yyyy}년 {mm}월 {dd}일 {hh}시 {mm}분"
-        android:textSize="14sp"
-        android:textColor="@color/Gray_400"
-        android:fontFamily="@font/pretendard_medium"
+        style="@style/dialog_content"
         android:gravity="center"
         android:layout_marginTop="8dp"/>
 
@@ -31,9 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_disagree_info"
-        android:textSize="14sp"
-        android:textColor="@color/Gray_400"
-        android:fontFamily="@font/pretendard_medium"
+        style="@style/dialog_content"
         android:gravity="center"/>
 
     <Button
