--- a/Oops-Android/app/src/main/res/layout/dialog_inventory_modify.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_inventory_modify.xml
@@ -11,18 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_inventory_modify"
-        android:textSize="20sp"
-        android:textColor="@color/Black"
-        android:fontFamily="@font/pretendard_bold"
+        style="@style/dialog_title"
         android:gravity="center"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_inventory_modify_info"
-        android:textSize="14sp"
-        android:textColor="@color/Gray_400"
-        android:fontFamily="@font/pretendard_medium"
+        style="@style/dialog_content"
         android:gravity="center"
         android:layout_marginTop="8dp"/>
 
