--- a/Oops-Android/app/src/main/res/layout/dialog_push_alert_agree.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_push_alert_agree.xml
@@ -11,18 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_agree"
-        android:textSize="20sp"
-        android:textColor="@color/Black"
-        android:fontFamily="@font/pretendard_bold"
+        style="@style/dialog_title"
         android:gravity="center"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_agree_info_1"
-        android:textSize="14sp"
-        android:textColor="@color/Gray_400"
-        android:fontFamily="@font/pretendard_medium"
+        style="@style/dialog_content"
         android:gravity="center"
         android:layout_marginTop="8dp"/>
 
@@ -31,9 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="{yyyy}년 {mm}월 {dd}일 {hh}시 {mm}분"
-        android:textSize="14sp"
-        android:textColor="@color/Gray_400"
-        android:fontFamily="@font/pretendard_medium"
+        style="@style/dialog_content"
         android:gravity="center"
         android:layout_marginTop="12dp"/>
 
@@ -41,9 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_agree_info_2"
-        android:textSize="14sp"
-        android:textColor="@color/Gray_400"
-        android:fontFamily="@font/pretendard_medium"
+        style="@style/dialog_content"
         android:gravity="center"/>
 
     <Button
