--- a/Oops-Android/app/src/main/res/layout/dialog_todo_modify.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_todo_modify.xml
@@ -12,18 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_todo_modify"
-        android:textSize="16sp"
-        android:textColor="@color/Black"
-        android:fontFamily="@font/pretendard_bold"
+        style="@style/dialog_title"
         android:gravity="center"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_todo_modify_info"
-        android:textSize="14sp"
-        android:textColor="@color/Gray_400"
-        android:fontFamily="@font/pretendard_medium"
+        style="@style/dialog_content"
         android:gravity="center"
         android:layout_marginTop="8dp"/>
 
