--- a/Oops-Android/app/src/main/res/menu/menu_bottom_navi.xml
+++ b/Oops-Android/app/src/main/res/menu/menu_bottom_navi.xml
@@ -3,7 +3,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/weeklyFragment"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/selector_bnv_home"
         android:title="@string/bnv_menu_1"
         app:showAsAction="always"/>
