Feat: 공지사항 조회 API 연결 및 공지사항 화면, 공지사항 상세 화면 로직 변경

--- a/Oops-Android/app/src/main/res/layout/fragment_notice_detail.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_notice_detail.xml
@@ -42,6 +42,7 @@
             android:textSize="12sp"
             android:textColor="@color/Gray_400"
             android:fontFamily="@font/pretendard_medium"
+            android:layout_marginTop="11dp"
             android:layout_marginStart="16dp"/>
         <View
             android:layout_width="match_parent"
