--- a/Oops-Android/app/src/main/res/layout/fragment_notice.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_notice.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/White"
     tools:context=".ui.Main.MyPage.NoticeFragment">
@@ -14,44 +15,20 @@
         android:id="@+id/toolbar_notice"
         layout="@layout/toolbar_sub"/>
 
-    <!-- 공지사항 리스트 -->
-    <View
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/Gray_100"/>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <LinearLayout
-        android:id="@+id/lLayout_notice_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="24dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="24dp">
-        <!-- 공지사항 제목 -->
-        <TextView
+        <!-- 공지사항 목록 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_notice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="공지사항 제목"
-            style="@style/Button2"
-            android:textColor="@color/Black"/>
-
-        <!-- 공지사항 내용 -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="공지사항 내용"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textSize="12sp"
-            android:textColor="@color/Gray_400"
-            android:fontFamily="@font/pretendard_medium"/>
-    </LinearLayout>
-
-    <!-- 공지사항 리스트 -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/Gray_100"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:overScrollMode="never"
+            android:nestedScrollingEnabled="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_notice_box_rv"/>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
