Style: 개인정보 수집 및 이용 동의 바텀 시트 디자인 변경
- 알림 수신 동의 약관 삭제 -> 안드로이드 정책 이슈로 변경

--- a/Oops-Android/app/src/main/res/layout/fragment_terms_bottom_sheet.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_terms_bottom_sheet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 개인정보 수집 및 이용 동의 약관 바텀 시트 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,9 +15,8 @@
         android:layout_height="wrap_content"
         android:text="@string/terms_info_1"
         android:textColor="@color/Black"
-        android:textSize="20sp"
-        android:fontFamily="@font/pretendard_bold"
-        android:layout_marginTop="24dp"
+        style="@style/H3"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"/>
 
@@ -24,37 +24,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="22dp"
-        android:layout_marginStart="32dp">
+        android:layout_marginTop="36dp"
+        android:layout_marginStart="24dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/terms_info_2"
             android:textColor="@color/Black"
-            android:textSize="14sp"
-            android:fontFamily="@font/pretendard_bold"/>
+            style="@style/Button2"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="*"
             android:textColor="@color/Red_Dark"
-            android:textSize="14sp"
-            android:fontFamily="@font/pretendard_bold"/>
+            style="@style/Button2"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="9dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
         android:gravity="center">
 
         <!-- 필수 동의 버튼 -->
         <ImageView
             android:id="@+id/iv_terms_bottom_sheet_vital"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/ic_check_24"/>
 
         <!-- 개인정보 수집 및 이용 동의 화면 이동 버튼 -->
@@ -62,63 +60,27 @@
             android:id="@+id/tv_terms_bottom_sheet_vital"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="11dp"
             android:text="@string/terms_vital"
-            android:textSize="14sp"
             android:textColor="@color/Black"
-            android:fontFamily="@font/pretendard_medium"/>
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/terms_info_3"
-        android:textColor="@color/Black"
-        android:textSize="14sp"
-        android:fontFamily="@font/pretendard_bold"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="32dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="9dp"
-        android:layout_marginStart="32dp"
-        android:gravity="center">
-
-        <!-- 선택 동의 버튼 -->
-        <ImageView
-            android:id="@+id/iv_terms_bottom_sheet_choice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_check_24"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:text="@string/terms_choice"
-            android:textSize="14sp"
-            android:textColor="@color/Black"
-            android:fontFamily="@font/pretendard_medium"/>
+            style="@style/Body2"/>
     </LinearLayout>
 
     <!-- 다음 버튼 -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="38dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="46dp"
+        android:layout_marginBottom="36dp"
         app:cardCornerRadius="146dp"
         app:cardElevation="0dp">
         <Button
             android:id="@+id/btn_terms_bottom_sheet_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/WideButtonDisableStyle"
+            style="@style/SemiWideButtonDisableStyle"
             android:text="@string/btn_next"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
