--- a/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
@@ -93,7 +93,7 @@
                     android:id="@+id/tv_inventory_stuff_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0/0"
+                    android:text="0/80"
                     android:textColor="#ABABAB"
                     android:textSize="14sp"
                     android:fontFamily="@font/pretendard_medium"
@@ -139,6 +139,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:visibility="gone"
                     android:gravity="center"
                     android:layout_marginBottom="104dp"
                     app:layout_constraintTop_toTopOf="parent"
