--- a/Oops-Android/app/src/main/res/layout/fragment_stuff_add.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_stuff_add.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Gray_50"
+    android:background="@color/White"
     android:orientation="vertical"
     tools:context=".ui.Tutorial.Tutorial3Activity">
 
@@ -19,7 +19,7 @@
         android:id="@+id/edt_stuff_add_search_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Body1"
+        style="@style/Body2"
         android:hint="@string/stuff_add_search_info"
         android:textColorHint="@color/Gray_400"
         android:textColor="@color/Gray_900"
@@ -110,6 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/WideButtonDisableStyle"
+            android:background="@color/Gray_100"
             android:text="@string/btn_complete"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
