--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -117,11 +117,10 @@
             android:name="stuffDivision"
             app:argType="string"/>
 
-        <!-- 현재 선택 중인 소지품 리스트 -->
+        <!-- 선택중인 인벤토리 id -->
         <argument
-            android:name="stuffList"
-            app:argType="com.oops.oops_android.ui.Main.Inventory.CategoryItemUI"
-            app:nullable="true"/>
+            android:name="inventoryId"
+            app:argType="long"/>
     </fragment>
 
     <!-- 콕콕 찌르기 -->
