Feat: 인벤토리내 소지품 추가 & 수정 API 연결

--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -121,6 +121,12 @@
         <argument
             android:name="inventoryId"
             app:argType="long"/>
+
+        <!-- 소지품 추가 -> 인벤토리 -->
+        <action
+            android:id="@+id/action_stuffAddFrm_to_inventoryFrm"
+            app:destination="@id/inventoryFragment"
+            app:popUpToInclusive="false"/>
     </fragment>
 
     <!-- 콕콕 찌르기 -->
