--- a/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:text="0/80"
                     android:textColor="#ABABAB"
-                    android:textSize="14sp"
+                    android:textSize="14dp"
                     android:fontFamily="@font/pretendard_medium"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
