--- a/Oops-Android/app/src/main/res/layout/item_inventory_stuff_box_rv.xml
+++ b/Oops-Android/app/src/main/res/layout/item_inventory_stuff_box_rv.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:id="@+id/item_inventory_stuff_image_iv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="90dp"
             android:scaleType="centerInside"
             android:background="#F3F3F3"/>
     </androidx.cardview.widget.CardView>
