--- a/Oops-Android/app/src/main/res/layout/fragment_stuff_add.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_stuff_add.xml
@@ -97,7 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:gravity="center"
                 android:layout_marginTop="104dp">
 
