Feat: 챙겨야 할 것 수정(소지품 삭제) API 연결
- navigation에 data class를 전달하고 싶은 경우,

--- a/Oops-Android/app/src/main/res/layout/fragment_stuff.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_stuff.xml
@@ -98,7 +98,8 @@
             android:id="@+id/btn_stuff_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/WideButtonDisableStyle"
+            style="@style/WideButtonEnableStyle"
+            android:background="@color/Main_500"
             android:text="@string/btn_stuff_add"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
