--- a/Oops-Android/app/src/main/res/layout/item_tutorial_stuff.xml
+++ b/Oops-Android/app/src/main/res/layout/item_tutorial_stuff.xml
@@ -32,6 +32,7 @@
         android:backgroundTint="@color/Gray_50"
         android:textAlignment="center"
         android:textColor="@color/Gray_400"
+        android:layout_marginTop="8dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"/>
 </LinearLayout>
