--- a/Oops-Android/app/src/main/res/layout/fragment_search_friends.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_search_friends.xml
@@ -79,7 +79,7 @@
                 android:id="@+id/lLayout_friends_no_search_result"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:background="@color/Gray_100"
