Fix: 소지품 추가 화면 이동 로직 변경
- 홈 화면에서 소지품 추가화면으로 이동되는 것을 고려하여, todoDate 정보도 navigation에서 전달받도록 수정함
- java.lang.Double cannot be cast to java.lang.Long 오류 발생
-> 서버에서는 long값을 주고 있지만, 프론트에서는 double로 값이 오고 있음.
-> double => string => double => long으로 변환시켜서 값을 받도록 변경함

--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -148,6 +148,12 @@
             android:name="stuffDivision"
             app:argType="string"/>
 
+        <!-- 일정 날짜 -->
+        <argument
+            android:name="todoDate"
+            app:argType="string"
+            app:nullable="true"/>
+
         <!-- 선택중인 인벤토리 id -->
         <argument
             android:name="inventoryId"
