Fix: 콕콕 찌르기 시 사용자의 이름으로 찌르기가 되도록

--- a/Oops-Android/app/src/main/res/layout/item_inventory_category_rv.xml
+++ b/Oops-Android/app/src/main/res/layout/item_inventory_category_rv.xml
@@ -18,6 +18,7 @@
         android:id="@+id/iv_item_inventory_category_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/ic_all_box_inventory_24"
         android:textColor="#B3FFFFFF"
         android:layout_gravity="start|center"/>
 
