Feat: 홈 화면의 챙겨야 할 것 수정(소지품 수정) API 연결

--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -164,6 +164,12 @@
             android:id="@+id/action_stuffAddFrm_to_inventoryFrm"
             app:destination="@id/inventoryFragment"
             app:popUpToInclusive="false"/>
+
+        <!-- 소지품 추가 -> 홈 -->
+        <action
+            android:id="@+id/action_stuffAddFrm_to_homeFrm"
+            app:destination="@id/homeFragment"
+            app:popUpToInclusive="false"/>
     </fragment>
 
     <!-- 콕콕 찌르기 -->
