--- a/Oops-Android/app/src/main/res/layout/dialog_edit_stuff.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_edit_stuff.xml
@@ -30,6 +30,7 @@
             android:id="@+id/lLayout_dialog_edit_stuff_inventory_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:background="@drawable/all_radius_12"
             android:backgroundTint="#374151"
             android:paddingTop="24dp"
