Fix: 소지품 목록 클릭 시 item 값만 바뀌도록 수정
- 기존: notifydatasetchanged를 통해 rv내의 모든 아이템을 다시 정의함
- 변경: notifyitemchanged를 통해 rv내의 특정 아이템만 다시 정의함

--- a/Oops-Android/app/src/main/res/layout/fragment_stuff_add.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_stuff_add.xml
@@ -27,6 +27,8 @@
         android:background="@drawable/all_radius_50"
         android:backgroundTint="@color/Gray_100"
         android:drawableStart="@drawable/ic_search_27"
+        android:imeOptions="actionDone"
+        android:inputType="text"
         android:paddingTop="14dp"
         android:paddingStart="22dp"
         android:paddingEnd="22dp"
