--- a/Oops-Android/app/src/main/res/layout/fragment_account.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_account.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 마이페이지 - 계정관리 화면 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -136,15 +137,16 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             app:cardCornerRadius="100dp"
             app:cardElevation="0dp"
             android:elevation="0dp">
             <ImageView
                 android:id="@+id/iBtn_account_google"
                 android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:layout_marginEnd="16dp"
-                android:outlineProvider="background"
+                android:layout_height="43dp"
+                android:background="@color/White"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_login_google_unselected_18"/>
         </androidx.cardview.widget.CardView>
 
@@ -158,8 +160,9 @@
             <ImageView
                 android:id="@+id/iBtn_account_naver"
                 android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:outlineProvider="background"
+                android:layout_height="43dp"
+                android:background="@color/White"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_login_naver_unselected_18"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
