--- a/Oops-Android/app/src/main/res/layout/fragment_find_pw.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_find_pw.xml
@@ -120,9 +120,10 @@
                     android:layout_height="wrap_content">
                     <!-- 인증코드 입력 edt -->
                     <EditText
-                        android:id="@+id/edt_find_pw_cdoe"
+                        android:id="@+id/edt_find_pw_code"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:enabled="false"
                         android:inputType="number"
                         android:maxLines="1"
                         style="@style/SubTitle"
@@ -146,12 +147,13 @@
 
                     <!-- 조회하기 -->
                     <TextView
-                        android:id="@+id/tv_find_pw_code_certify"
+                        android:id="@+id/tv_find_pw_code_certify_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|center"
                         android:background="@drawable/all_radius_08"
                         android:backgroundTint="@color/Gray_200"
+                        android:enabled="false"
                         style="@style/Button3_Active"
                         android:text="@string/btn_code_certify"
                         android:textColor="@color/Gray_400"
@@ -215,6 +217,20 @@
                     style="@style/SemiWideButtonDisableStyle"
                     android:text="@string/btn_pw_reset"/>
             </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <!-- 무한 로딩 프로그레스 바(네트워크 연결 시 사용) -->
+        <LinearLayout
+            android:id="@+id/lLayout_find_pw_progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:gravity="center">
+            <ProgressBar
+                android:id="@+id/progressBar_find_pw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateTint="@color/Main_500"/>
         </LinearLayout>
 
         <!-- 비밀번호 재설정 뷰 -->
