Feat: 새로운 비밀번호로 변경 API 연결

--- a/Oops-Android/app/src/main/res/layout/fragment_find_pw.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_find_pw.xml
@@ -428,9 +428,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/SemiWideButtonDisableStyle"
-                    android:text="@string/btn_pw_reset"/>
+                    android:text="@string/btn_pw_reset_end"/>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
-
     </FrameLayout>
 </LinearLayout>
