Fix: 홈 화면에서 소지품을 다 챙겼을 경우, 소지품이 없을 경우 분기처리
- 기존: 사용자가 stuff를 다 챙겼는지, 소지품을 추가를 안 했는지 알 수 없었음
- 변경: 서버에게 isCompleteStuff필드로 위의 여부를 알 수 있도록 하는 필드를 보내달라고 부탁드려서, 화면에서 로직 분기 처리를 함

--- a/Oops-Android/app/src/main/res/layout/fragment_home.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_home.xml
@@ -190,9 +190,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="챙겨야 할 것"
-                    android:textSize="18sp"
-                    android:textColor="#1C1C1C"
-                    android:fontFamily="@font/pretendard_bold"
+                    style="@style/H4"
+                    android:textColor="@color/Black_1C"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
 
@@ -242,11 +241,37 @@
                 android:id="@+id/tv_home_stuff_default"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_gravity="center"
                 android:layout_marginTop="49dp"
                 android:text="일정 추가 후 소지품이 추가돼요"
                 style="@style/Body2"
                 android:textColor="@color/Gray_400" />
+
+            <LinearLayout
+                android:id="@+id/lLayout_home_stuff_no_inventory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
+                android:layout_marginBottom="24dp"
+                android:visibility="gone"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="인벤토리가 비어 있어요"
+                    style="@style/Body2"
+                    android:textColor="@color/Gray_400" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="7dp"
+                    android:text="소지품을 추가해 주세요!"
+                    style="@style/Body2"
+                    android:textColor="@color/Gray_400" />
+            </LinearLayout>
 
             <!-- 챙겨야 할 것 -->
             <androidx.recyclerview.widget.RecyclerView
@@ -279,9 +304,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="오늘 할 일"
-                    android:textSize="18sp"
-                    android:textColor="#1C1C1C"
-                    android:fontFamily="@font/pretendard_bold"
+                    android:textColor="@color/Black_1C"
+                    style="@style/H4"
                     android:layout_marginStart="16dp"/>
 
                 <!-- 홈 화면의 오늘 할 일 태그가 들어 갈 레이아웃 -->
