--- a/Oops-Android/app/src/main/res/layout/dialog_withdrawal.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_withdrawal.xml
@@ -3,7 +3,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="296dp"
     android:layout_height="wrap_content"
     android:background="@drawable/all_radius_12"
     android:padding="16dp">
