Feat: 프로필 변경 바텀 시트 구현 및 프로필 변경 API 연결
프로필 변경 바텀 시트 구현
- 갤러리 권한 설정 및 연결
- 카메라 권한 설정 및 연결
- 권한 비동의 시, 환경설정 화면으로 이동하도록 유도하는 팝업창 띄우기
- 프로필 변경 API 연결

--- a/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/iv_myPage_profile"
                     android:layout_width="89dp"
                     android:layout_height="89dp"
-                    android:src="@drawable/ic_friends_profile_default_50"/>
+                    android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
 
             <!-- 사용자 닉네임 -->
