--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv_3.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv_3.xml
@@ -27,7 +27,7 @@
             android:id="@+id/iv_friends_box_3_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_friends_profile_default_50"/>
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
