--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
@@ -26,7 +26,7 @@
             android:id="@+id/iv_friends_profile_2"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_friends_profile_default_50"/>
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
     <!-- 이름 -->
